<resources>
    <string name="app_name">CalmDown</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="hello">Hello Again!</string>
    <string name="hrv">HRV Value</string>
    <string name="password">Enter password</string>
    <string name="email">Enter email</string>
    <string name="login">Login</string>
    <string name="register">Dont have an account? Create now!</string>
    <string name="height">Enter Height</string>
    <string name="weight">Enter Weight</string>
    <string name="birthdate">Enter Birthdate</string>
    <string name="name">Enter Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="home">home\n</string>
    <string name="profile">profile\n</string>
    <string name="device">device\n</string>
    <string name="menu">menu_settings\n</string>
    <string name="menu_settings">Definitions</string>
    <string name="choose_gender">Choose Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="controled_respiration">Controled Respiration</string>
    <string name="select_variable_prompt">Selecione a Variável</string>
    <string name="select_data_type_prompt">Selecione o Tipo de Dados</string>
    <string name="prev_day">Dia Anterior</string>
    <string name="next_day">Próximo Dia</string>
    <string-array name="variable_options">
        <item>Pulse</item>
        <item>RR</item>
        <item>bpm</item>
        <item>bpmi</item>
        <!-- Adicione outros itens conforme necessário -->
    </string-array>
    <string-array name="history_options">
        <item>STRESS</item>
        <item>RMSSD</item>
        <!-- Adicione outros itens conforme necessário -->
    </string-array>

</resources>