<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent" android:layout_height="wrap_content" >

	<ScrollView android:id="@+id/loginactivity" 
		android:layout_width="wrap_content" 
		android:layout_height="match_parent" >

		<RelativeLayout android:id="@+id/content_container" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" >


			<RelativeLayout android:id="@+id/page_loginactivity"
				android:layout_marginTop="0dp"
				android:layout_marginStart="0dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>

				<View   android:id="@+id/_bg__loginactivity_ek2"
					android:background="@drawable/_bg__loginactivity_ek2_shape"
					 android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:layout_width="411dp"
					android:layout_height="823dp" />

				<ImageView android:id="@+id/blur"
					android:src="@drawable/blur"
					android:contentDescription="blur"
					 android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:layout_width="411dp"
					android:layout_height="823dp" />

				<TextView android:id="@+id/welcome_onboard_"
					android:textStyle="bold"
					android:layout_gravity="center_horizontal|center"
					android:gravity="center"
					android:textSize="32sp"
					android:textColor="@color/text_color"
					android:layout_marginLeft="-5dp"
					android:layout_marginTop="218dp"
					android:layout_width="418.2dp"
					android:layout_height="39.2dp"
					android:text="@string/hello"
					 />


				<RelativeLayout android:id="@+id/button"
					android:layout_marginTop="520dp"
					android:layout_marginStart="0dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<View   android:id="@+id/_bg__button_ek1"
						android:background="@drawable/bt_info"
						 android:layout_marginStart="0dp"
						android:layout_marginTop="0dp"
						android:layout_width="411dp"
						android:layout_height="84dp" />

					<TextView android:id="@+id/you_dont_have_an_account__create_now_"
						android:textStyle="bold"
						android:layout_gravity="center_horizontal|center"
						android:gravity="center"
						android:textSize="13sp"
						android:textColor="@color/text_color"
						android:layout_marginLeft="-2dp"
						android:layout_marginTop="0dp"
						android:layout_width="416.04dp"
						android:layout_height="88.3dp"
						android:text="@string/register"
						 />

				</RelativeLayout>


				<RelativeLayout android:id="@+id/bt_rectangle"
					android:layout_marginTop="493dp"
					android:layout_marginStart="69dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<View   android:id="@+id/rectangle_1"
						android:background="@drawable/bt_rectangle"
						 android:layout_marginStart="0dp"
						android:layout_marginTop="0dp"
						android:layout_width="271dp"
						android:layout_height="50dp" />

					<TextView android:id="@+id/login"
						android:textStyle="bold"
						android:layout_gravity="center_horizontal|center"
						android:gravity="center"
						android:textSize="20sp"
						android:textColor="@color/white"
						android:layout_marginLeft="-3dp"
						android:layout_marginTop="0dp"
						android:layout_width="277.17dp"
						android:layout_height="56dp"
						android:text="@string/login"
						 />

				</RelativeLayout>


				<RelativeLayout android:id="@+id/input"
					android:layout_marginTop="380dp"
					android:layout_marginStart="14dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<View
						android:id="@+id/input_emaill"
						android:layout_width="383dp"
						android:layout_height="61dp"
						android:layout_marginStart="0dp"
						android:layout_marginTop="0dp"
						android:background="@drawable/input" />

					<View   android:id="@+id/input_email"
						android:background="@drawable/input"
						 android:layout_marginStart="0dp"
						android:layout_marginTop="0dp"
						android:layout_width="383dp"
						android:layout_height="61dp" />

					<TextView android:id="@+id/enter_password"
						android:textSize="13sp"
						android:textColor="@color/text_color"
						android:layout_marginLeft="35.35dp"
						android:layout_marginTop="20.14dp"
						android:layout_width="124.3dp"
						android:layout_height="22.3dp"
						android:text="@string/password"
						 />

				</RelativeLayout>


				<RelativeLayout android:id="@+id/input_ek2"
					android:layout_marginTop="302dp"
					android:layout_marginStart="13dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<View   android:id="@+id/_bg__input_ek3"
						android:background="@drawable/_bg__button_ek3_shape"
						 android:layout_marginStart="0dp"
						android:layout_marginTop="0dp"
						android:layout_width="383dp"
						android:layout_height="61dp" />

					<View   android:id="@+id/rectangle_2_ek1"
						android:background="@drawable/input"
						 android:layout_marginStart="0dp"
						android:layout_marginTop="0dp"
						android:layout_width="383dp"
						android:layout_height="61dp" />

					<TextView android:id="@+id/enter_email"
						android:textSize="13sp"
						android:textColor="@color/text_color"
						android:layout_marginLeft="35.35dp"
						android:layout_marginTop="20.14dp"
						android:layout_width="94.3dp"
						android:layout_height="22.3dp"
						android:text="@string/email"
						 />

				</RelativeLayout>

				<ImageView android:id="@+id/logo2"
					android:src="@drawable/logo2"
					android:contentDescription="logo2"
					 android:layout_marginStart="145dp"
					android:layout_marginTop="12dp"
					android:layout_width="122dp"
					android:layout_height="97dp" />

			</RelativeLayout>
		</RelativeLayout>

	</ScrollView>
</HorizontalScrollView>